# hrrlib

./: LICENSE.md  README.md  pyproject.toml  setup.cfg
hrrlib/: __init__.py  core.py  errors.py  rand.py
