[metadata]
name = hrrlib
version = 0.0.1
author = Ren Ozen
author_email = renanozen@cmail.carleton.ca
description = A library implementing holographic reduced representations (Plate, 1995).
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10.5
include_package_data = True
install_requires = 
    numpy

[options.packages.find]
exclude =
    tests